# ProFatXuanAll.github.io

./: .gitignore  .markdownlint.json  404.html  404.md  Gemfile  README.md  _config.yml  about.html  about.md  archives.html  archives.md  categories.html  categories.md  feed.xml  index.html  pyproject.toml  sitemap.xml  tags.html  tags.md
.github/workflows/: build-jekyll.yml
_drafts/: 2021-11-30-learning-long-term-dependencies-with-gradient-descent-is-difficult.md  2021-11-30-local-feedback-multilayered-networks.md  2021-12-03-a-time-delay-neural-network-architecture-for-isolated-word-recognition.md  2021-12-28-long-short-term-memory-based-recurrent-neural-network-architectures-for-large-scale-vocabulary-speech-recognition.md  2021-12-28-long-short-term-memory-recurrent-neural-network-architectures-for-large-scale-acoustic-modeling.md  2022-03-08-learning-phrase-representations-using-rnn-encoder-decoder-for-statistical-machine-translation.md  2022-03-09-statistical-phrase-based-translation.md  2022-03-10-the-mathematics-of-statistical-machine-translation-parameter-estimation.md  test.md
_includes/: custom-head.html
_includes/tools/: avoid-copy-1.html  avoid-copy-2.html  math.html
_includes/views/: footer.html
_layouts/: ML-note.html
_posts/: 2021-11-14-long-short-term-memory.md  2021-11-30-local-feedback-multilayered-networks.md  2021-12-06-a-time-delay-neural-network-architecture-for-isolated-word-recognition.md  2021-12-07-learning-representations-by-backpropagating-errors.md  2021-12-13-learning-to-forget-continual-prediction-with-lstm.md  2021-12-21-finding-structure-in-time.md  2021-12-29-learning-precise-timing-with-lstm-recurrent-networks.md  2022-03-01-long-short-term-memory-based-recurrent-neural-network-architectures-for-large-scale-vocabulary-speech-recognition.md  2022-03-01-long-short-term-memory-recurrent-neural-network-architectures-for-large-scale-acoustic-modeling.md  2022-08-06-a-standard-corpus-of-edited-present-day-american-english.md  2022-08-12-building-a-large-annotated-corpus-of-english-the-penn-treebank.md  2022-08-19-the-penn-treebank-annotating-predicate-argument-structure.md  2022-08-29-generating-sequences-with-recurrent-neural-networks.md
acoustic modeling/2021/12/06/: a-time-delay-neural-network-architecture-for-isolated-word-recognition.html
acoustic modeling/2022/03/01/: long-short-term-memory-based-recurrent-neural-network-architectures-for-large-scale-vocabulary-speech-recognition.html  long-short-term-memory-recurrent-neural-network-architectures-for-large-scale-acoustic-modeling.html
assets/css/: main.css
dataset/2022/08/06/: a-standard-corpus-of-edited-present-day-american-english.html
dataset/2022/08/12/: building-a-large-annotated-corpus-of-english-the-penn-treebank.html
dataset/2022/08/19/: the-penn-treebank-annotating-predicate-argument-structure.html
general sequence modeling/2021/11/30/: local-feedback-multilayered-networks.html
general sequence modeling/2021/12/13/: learning-to-forget-continual-prediction-with-lstm.html
general sequence modeling/2021/12/29/: learning-precise-timing-with-lstm-recurrent-networks.html
general sequence modeling/optimization/2021/11/14/: long-short-term-memory.html
gradient descent/model architecture/neural network/2021/11/14/: long-short-term-memory.html
gradient descent/model architecture/neural network/2021/11/30/: local-feedback-multilayered-networks.html
gradient descent/model architecture/neural network/2021/12/06/: a-time-delay-neural-network-architecture-for-isolated-word-recognition.html
gradient descent/neural network/2021/12/07/: learning-representations-by-backpropagating-errors.html
model architecture/neural network/2021/12/13/: learning-to-forget-continual-prediction-with-lstm.html
model architecture/neural network/2021/12/21/: finding-structure-in-time.html
model architecture/neural network/2021/12/29/: learning-precise-timing-with-lstm-recurrent-networks.html
model architecture/neural network/2022/03/01/: long-short-term-memory-based-recurrent-neural-network-architectures-for-large-scale-vocabulary-speech-recognition.html  long-short-term-memory-recurrent-neural-network-architectures-for-large-scale-acoustic-modeling.html
optimization/2021/12/07/: learning-representations-by-backpropagating-errors.html
page2/: index.html
source/: about.rst  conf.py  glossary.rst  index.rst  refs.bib
source/bibtex/: ACL.bib  CVPR.bib  Cognitive-Science.bib  EMNLP.bib  ICLR.bib  JMLR.bib  NAACL.bib  NIPS.bib  Nature.bib  Neural-Computation.bib  Neural-Networks.bib  misc.bib
source/post/: index.rst  test1.rst  test2.rst
source/post/code/: index.rst  python-descriptor.rst
source/post/math/: bptt.rst  index.rst  sigmoid.rst  tanh.rst
source/post/ml/: index.rst  learning-to-forget-continual-prediction-with-lstm.rst  long-short-term-memory.rst
text modeling/2021/12/21/: finding-structure-in-time.html
text modeling/2022/08/29/: generating-sequences-with-recurrent-neural-networks.html
