[project]
name = ""
version = ""
description = ""
authors = [{ name = "ProFatXuanAll", email = "ProFatXuanAll@gmail.com" }]
dependencies = [
  "furo>=2023.7.26",
  "pip>=23.2.1",
  "setuptools>=68.0.0",
  "sphinx>=7.1.1",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinxcontrib-bibtex>=2.5.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
lint = ["nbqa>=1.7.0", "ruff>=0.1.4"]


[tool.pdm.scripts]
lint = { composite = ["py.lint", "ipynb.lint"] }
"py.lint" = "ruff check --fix source"
"ipynb.lint" = "nbqa ruff --fix . --ignore T201"
build = "sphinx-build -b html source build"
build-coverage = "sphinx-build -b coverage source build"
dev = "sphinx-autobuild --watch . --open-browser source build"

[tool.ruff]
ignore = [
  "ANN101",
  "ANN102",
  "COM819",
  "CPY",
  "D203",
  "D213",
  "D413",
  "D416",
  "E111",
  "E114",
  "FA",
  "W191",
  "W505",
]
ignore-init-module-imports = true
include = ["*.py", "*.pyi"]
indent-width = 2
line-length = 120
select = [
  "A",
  "AIR",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FIX",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
target-version = "py39"
task-tags = ["TODO", "FIXME"]
unfixable = ["B007", "ERA", "F401", "F841"]

[tool.ruff.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-tidy-imports.banned-api]
"typing.Dict".msg = "Use dict instead."
"typing.List".msg = "Use list instead."

[tool.ruff.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pylint]
max-args = 20
max-statements = 100
